--- a/Aula_02.html
+++ b/Aula_02.html
@@ -6,5 +6,24 @@
 </head>
 <body>
     <h1>Continuação da jornada em HTML</h1>
+    
+    <ol start="1"> <style></style>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+        <li>Item 5</li>
+        <li>Item 6</li>
+        <li>Item 7</li>
+
+        <p>Minha <b>sub</b>Lista não ordenada</p>
+        <ul>
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+            <li>Item 4</li>
+        </ul>
+    </ol>
+
 </body>
 </html>
