--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -6,22 +6,22 @@
 </head>
 <body>
     <h1>Alberto Maciel Cruz Junior</h1> 
-    <p>Breve descrição sobre mim</p>
+    <p>Tenho 18 anos, nascido na Bahia, estou cursando Análise e desenvolvimento de sistemas, um curso bem atual poddendo abrir várias portas no futuro, porém tinha interesse em fazer economia desde sempre, e por algum motivo decidi mudar de ultima hora, mas estou gostando muito, e espero aprender mais.</p>
 
     <img src="https://img.freepik.com/fotos-gratis/jovem-barbudo-com-camisa-listrada_273609-5677.jpg?semt=ais_country_boost&w=740">
     
     <h2>Meus hobbies</h2>
     <ul>
-        <li>Hobby 1</li>
-        <li>Hobby 2</li>
-        <li>Hobby 3</li>
+        <li>Jogar futebol</li>
+        <li>Passar um tempo com amigos e familiares</li>
+        <li>Assistir filmes</li>
     </ul>
 
     <h2>Minhas metas</h2>
     <ol type="a">
-        <li>Meta 1</li>
-        <li>Meta 2</li>
-        <li>Meta 3</li>
+        <li>Comprar uma casa</li>
+        <li>Fazer uma viagem para Maceió</li>
+        <li>Conseguir aprender o máximo possivel no curso, e passar em todas as máterias</li>
     </ol>
 
     <h2>Um filme aguardado</h2>
