--- a/Aula_03.html
+++ b/Aula_03.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     <h1>Alberto Maciel Cruz Junior</h1> 
-    <p>Tenho 18 anos, nascido na Bahia, estou cursando Análise e desenvolvimento de sistemas, um curso bem atual poddendo abrir várias portas no futuro, porém tinha interesse em fazer economia desde sempre, e por algum motivo decidi mudar de ultima hora, mas estou gostando muito, e espero aprender mais.</p>
+    <p>Tenho 18 anos, nascido na Bahia, estou cursando Análise e desenvolvimento de sistemas, um curso bem atual <br> podendo abrir várias portas no futuro, porém tinha interesse em fazer economia desde sempre, e por algum <br> motivo decidi mudar de ultima hora, mas estou gostando muito, e espero aprender mais.</p>
 
-    <img src="https://img.freepik.com/fotos-gratis/jovem-barbudo-com-camisa-listrada_273609-5677.jpg?semt=ais_country_boost&w=740">
+    <img src="https://s2-ge.glbimg.com/g7MpoKrMJC7aQV-Vx0Wkt7RdPKo=/0x0:1024x790/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2023/w/t/zXIzdMSh2ruZreEj4AcA/gettyimages-1396847536.jpg">
     
     <h2>Meus hobbies</h2>
     <ul>
