--- a/aula_06.html
+++ b/aula_06.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8" />
     <title>Aula - Div com CSS</title>
+    <style>
+        .minhaClasse.Div{
+            background-color: aqua;
+            font-size: 30px;
+            border: 2px solid brown;
+        }
+
+        .minhaClassePg{
+            background-color: black;
+        }
+    </style>
 </head>
 <body>
-    
-    <P>Meu texto fica nessa parte.</P>
-
+    <div class="minhaClasseDiv">
+        <p>Meu texto fica nessa parte.</p>
+    </div> 
 </body>
 </html>
