--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -6,48 +6,25 @@
 </head>
 <body>
     <h1>Alberto Maciel Cruz Junior</h1> 
-    <p>Breve descrição sobre mim</p>
+    <p>Tenho 18 anos, nascido na Bahia, estou cursando Análise e desenvolvimento de sistemas, um curso bem atual <br> podendo abrir várias portas no futuro, porém tinha interesse em fazer economia desde sempre, e por algum <br> motivo decidi mudar de ultima hora, mas estou gostando muito, e espero aprender mais.</p>
 
-    <img src="https://img.freepik.com/fotos-gratis/jovem-barbudo-com-camisa-listrada_273609-5677.jpg?semt=ais_country_boost&w=740">
+    <img src="https://s2-ge.glbimg.com/g7MpoKrMJC7aQV-Vx0Wkt7RdPKo=/0x0:1024x790/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2023/w/t/zXIzdMSh2ruZreEj4AcA/gettyimages-1396847536.jpg">
     
     <h2>Meus hobbies</h2>
     <ul>
-        <li>Hobby 1</li>
-        <li>Hobby 2</li>
-        <li>Hobby 3</li>
+        <li>Jogar futebol</li>
+        <li>Passar um tempo com amigos e familiares</li>
+        <li>Assistir filmes</li>
     </ul>
 
     <h2>Minhas metas</h2>
     <ol type="a">
-        <li>Meta 1</li>
-        <li>Meta 2</li>
-        <li>Meta 3</li>
+        <li>Comprar uma casa</li>
+        <li>Fazer uma viagem para Maceió</li>
+        <li>Conseguir aprender o máximo possivel no curso, e passar em todas as máterias</li>
     </ol>
 
     <h2>Um filme aguardado</h2>
     <iframe width="560" height="315"
         src="https://www.youtube.com/watch?v=I3YE9ltzebI">
     </iframe>
-
-    <h2>Próximas atividades - Agenda</h2>
-    <table border="1">
-        <thead>
-            <td>Evento</td>
-            <td>Data</td>
-            <td>Local</td>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Show</td>
-                <td>22/05/2025</td>
-                <td>Rio de Janeiro</td> 
-            </tr>
-            <tr>
-                <td>Show</td>
-                <td>22/05/2025</td>
-                <td>Rio de Janeiro</td> 
-            </tr>
-        </tbody>
-    </table>
-</body>
-</html>
