--- a/meucss.html
+++ b/meucss.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <title>DIV - continuição</title>
-    <link rel="stylesheet" href="meunovo.css">
+    <link rel="stylesheet" href="meucss.css">
 </head>
 <body> 
+    <!--<p style="color: white;">Minha página HTML com estilo branco</p>
+    <p style="color: blue; text-align: center; border: 2px solid green; margin-top: 100px;">Minha página HTML com estilo</p>
+    <p style="color: yellow; text-align: center; border: 2px solid green; margin-top: 100px;">Minha página HTML com estilo</p>
+    <p style="color: gray; text-align: center; border: 2px solid green; margin-top: 100px;">Minha página HTML com estilo</p>-->
     <h1>Este cabeçalho recebe CSS direto</h1>
     <h1>Este cabeçalho recebe CSS direto</h1>
     <p class="classeTagParagrafo">Novo parágrafo com CSS 01</p>
