--- a/Aula_css_flex_box.html
+++ b/Aula_css_flex_box.html
@@ -14,12 +14,13 @@
         <div class="card">Item 1</div>
         <div class="card">Item 2</div>
         <div class="card">Item 3</div>
-        <div class="card">Item 1</div>
-        <div class="card">Item 2</div>
-        <div class="card">Item 3</div>
-        <div class="card">Item 1</div>
-        <div class="card">Item 2</div>
-        <div class="card">Item 3</div>
+        <div class="card">Item 4</div>
+        <div class="card">Item 5</div>
+        <div class="card">Item 6</div>
+        <div class="card">Item 7</div>
+        <div class="card">Item 8</div>
+        <div class="card">Item 9</div>
+        <div class="card inicio">Item 10</div>
     </main>
     <footer>
         <p>Rodapé</p>
